	PR c++/56268 	* semantics.c (classtype_has_nothrow_assign_or_copy_p): Call 	maybe_instantiate_noexcept.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@195943 138bc75d-0d04-0410-961f-82ee72b054a4