gcc/testsuite/g++.dg/ext/has_nothrow_copy-8.C
@@ -1,0 +1,19 @@
+// PR c++/56268
+// { dg-options -std=c++11 }
+
+template <class T>
+struct A {
+  A(const A&) noexcept (T::value);
+};
+
+struct B {
+  static const bool value = true;
+};
+
+template <class T>
+struct C {
+  static const bool value = __has_nothrow_copy (T);
+};
+
+#define SA(X) static_assert((X),#X)
+SA(C<A<B>>::value);
